k8s/fibo-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: fibo-client-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: fibo-client
                  image: dbernat/fibo-client
                  ports:
                    - containerPort: 3000
