k8s/fibo-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: fibo-postgres-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: postgres
    template:
        metadata:
            labels:
                component: postgres
        spec:
            volumes:
                - name: fibo-postgres-storage
                  persistentVolumeClaim:
                    claimName:  fibo-postgres-persistent-volume-claim
            containers:
                - name: postgres
                  image: postgres
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                    - name: fibo-postgres-storage
                      mountPath:  /var/lib/postgresql/data
                      subPath: postgres
