k8s/fibo-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: fibo-worker-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: worker
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: fibo-worker
                  image: dbernat/fibo-worker
